# colossus

./: .editorconfig  .gitignore  .travis.yml  LICENSE  Procfile  README.md  app.json  manage.py  requirements.txt  setup.cfg  tox.ini
colosseum/: settings.py  urls.py  wsgi.py
colosseum/mailing/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
colosseum/templates/: base.html
colossus/: api_urls.py  celery.py  heroku_settings.py  production_settings.py  ratelimit.py  settings.py  storage.py  test.py  urls.py  utils.py  wsgi.py
colossus/api/: forms.py  models.py  urls.py  views.py
colossus/campaigns/: api.py  apps.py  constants.py  forms.py  markup.py  mixins.py  models.py  tasks.py  urls.py  views.py
colossus/core/: apps.py  models.py  views.py
colossus/emailtemplates/: apps.py  models.py  urls.py  views.py
colossus/lists/: __init__.py  apps.py  charts.py  forms.py  models.py  urls.py  views.py
colossus/mailing/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
colossus/pages/: apps.py
colossus/static/: robots.txt
colossus/subscribers/: activities.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
docs/: Makefile  conf.py  features.rst  index.rst  make.bat  modules.rst  quickstart.rst  spelling_wordlist.txt  test.rst
etc/: celery_supervisord.conf  colossus_celery_beat_supervisord.conf  colossus_celery_worker_supervisord.conf  colossus_gunicorn_supervisord.conf  colossus_nginx.conf  colossus_supervisord.conf  production_settings.py
requirements/: base.txt  development.txt  docs.txt  production.txt  tests.txt
(+369 files in other folders)
