[flake8]
exclude = .git,.tox,*/migrations/*
max-line-length = 119

[isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 5
skip = migrations
not_skip = __init__.py
default_section = THIRDPARTY
known_first_party = colossus
known_django = django
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[coverage:run]
branch = true
source = colossus
omit = */migrations/*,*/tests/*,colossus/wsgi.py

[metadata]
license-file = LICENSE
